--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -145,7 +145,7 @@
                                                 Width (inchs)
                                             </label>
                                             <div class="col-sm-8">
-                                                <input type="number" step="0.001" min="0"
+                                                <input type="number" step="any" min="0"
                                                         class="form-control wi-form-control" name="width"
                                                         ng-model="wiModal.props.general.width">
                                             </div>
