--- a/source/dialogs/zone-manager/zone-manager-modal.html
+++ b/source/dialogs/zone-manager/zone-manager-modal.html
@@ -123,21 +123,26 @@
                                                 <td style="width: 22%">
                                                     <ui-select theme="bootstrap" 
                                                                 ng-model="zone.properties.fill.pattern.name"
-                                                                ng-change="wiModal.onZoneChanged($index);">
+                                                                ng-change="wiModal.onZoneChanged($index);"
+                                                                search-enabled="false">
                                                         <ui-select-match>
                                                             <wi-canvas-rect name="row_{{$index}}" 
                                                                             pattern="{{zone.properties.fill.pattern.name}}" 
-                                                                            width="40" height="20" 
+                                                                            width="120" height="20" 
                                                                             foreground="{{zone.properties.fill.pattern.foreground}}" 
                                                                             background='{{zone.properties.fill.pattern.background}}'>
                                                             </wi-canvas-rect>
                                                         </ui-select-match>
                                                         <ui-select-choices repeat="selectedPattern in wiModal.selectPatterns">
-                                                            <wi-canvas-rect name="{{selectedPattern}}" pattern="{{selectedPattern}}" 
-                                                                            width="40" height="20" 
-                                                                            foreground="{{zone.properties.fill.pattern.foreground}}" 
-                                                                            background="{{zone.properties.fill.pattern.background}}">
-                                                            </wi-canvas-rect>
+                                                            <div>
+                                                                <span class="col-sm-3 tiny-text padding-0">{{selectedPattern | uppercase}}</span>
+                                                                <wi-canvas-rect name="{{selectedPattern}}" pattern="{{selectedPattern}}" 
+                                                                                width="50" height="20" 
+                                                                                foreground="{{zone.properties.fill.pattern.foreground}}" 
+                                                                                background="{{zone.properties.fill.pattern.background}}"
+                                                                                style="float: right;">
+                                                                </wi-canvas-rect>
+                                                            </div>
                                                         </ui-select-choices>
                                                     </ui-select>
                                                 </td>
