--- a/source/dialogs/annotation-properties/annotation-properties-modal.html
+++ b/source/dialogs/annotation-properties/annotation-properties-modal.html
@@ -23,25 +23,25 @@
                             <div class="form-group">
                                 <label for="left" class="control-label col-sm-4 normal-text">Left (%)</label>
                                 <div class="col-sm-8">
-                                    <input type="number" step="0.01" class="form-control wi-form-control" id="left" ng-model="wiModal.props.left">
+                                    <input type="number" step="any" class="form-control wi-form-control" id="left" ng-model="wiModal.props.left">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="topDepth" class="control-label col-sm-4 normal-text">Top (depth)</label>
                                 <div class="col-sm-8">
-                                    <input type="number" step="0.01" class="form-control wi-form-control" id="topDepth" ng-model="wiModal.props.top">
+                                    <input type="number" step="any" class="form-control wi-form-control" id="topDepth" ng-model="wiModal.props.top">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="bottomDepth" class="control-label col-sm-4 normal-text">Bottom (depth)</label>
                                 <div class="col-sm-8">
-                                    <input type="number" step="0.01" class="form-control wi-form-control" id="bottomDepth" ng-model="wiModal.props.bottom">
+                                    <input type="number" step="any" class="form-control wi-form-control" id="bottomDepth" ng-model="wiModal.props.bottom">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="width" class="control-label col-sm-4 normal-text">Width (%)</label>
                                 <div class="col-sm-8">
-                                    <input type="number" step="0.01" class="form-control wi-form-control" id="width" ng-model="wiModal.props.width">
+                                    <input type="number" step="any" class="form-control wi-form-control" id="width" ng-model="wiModal.props.width">
                                 </div>
                             </div>
                         </div>
