--- a/source/dialogs/depth-track-properties/depth-track-properties-modal.html
+++ b/source/dialogs/depth-track-properties/depth-track-properties-modal.html
@@ -59,7 +59,7 @@
                                 <div class="form-group">
                                     <label class="control-label col-sm-5 normal-text" for="width">Width (inchs)</label>
                                     <div class="col-sm-7">
-                                            <input type="number" min="0" step="0.001" class="form-control wi-form-control" id="width" ng-model="wiModal.props.width">
+                                            <input type="number" min="0" step="any" class="form-control wi-form-control" id="width" ng-model="wiModal.props.width">
                                     </div>
                                 </div>
                             </div>
