--- a/source/dialogs/object-track-properties/object-track-properties-modal.html
+++ b/source/dialogs/object-track-properties/object-track-properties-modal.html
@@ -39,7 +39,7 @@
                             <div class="form-group">
                                 <label class="control-label col-sm-5 padding-left-3em" for="width">Width (inchs)</label>
                                 <div class="col-sm-7">
-                                    <input type="number" min="0" step="0.001" class="form-control wi-form-control" id="width" ng-model="wiModal.width">
+                                    <input type="number" min="0" step="any" class="form-control wi-form-control" id="width" ng-model="wiModal.width">
                                 </div>
                             </div>
                             <div class="form-group">
