--- a/source/html/simpleLayout.html
+++ b/source/html/simpleLayout.html
@@ -145,8 +145,8 @@
     <template id='inventory-connect'>
         <div style='height:100%;display:flex;flex-direction:column;background-color:#f4f4f4;'>
             <h3 class="content-heading">Inventory Connect</h3>
-            <!--<wi-inventory style='flex:1;' id-project='1'></wi-inventory>-->
-            <wi-inventory style='flex:1;'></wi-inventory>
+            <wi-inventory style='flex:1;' id-project='1'></wi-inventory>
+            <!-- <wi-inventory style='flex:1;'></wi-inventory> -->
         </div>
     </template>
     
