--- a/source/html/index.html
+++ b/source/html/index.html
@@ -137,6 +137,7 @@
             <i class="fa fa-caret-right" aria-hidden="true" id="nextBtn" title="Next"></i>
         </div>
     </template>
+    <div id="testElement"></div>
 </body>
 
 </html>
