--- a/source/html/simpleLayout.html
+++ b/source/html/simpleLayout.html
@@ -113,6 +113,7 @@
                         <wi-button name="WipmButton" icon="fluid-zone-32x32" label="WIPM" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.WipmButtonClicked">
                         </wi-button>
                         <wi-button name="WellImport" icon="well-load-32x32" label="Mega Import" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.WellImportClicked"></wi-button>
+                        <wi-button name="TestChooseData" icon="edit-curve-32x32" label="Test Choose Data" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.TestChooseData"></wi-button>
                         <wi-button name="ExitButton" icon="exit-32x32" label="Exit" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.ExitButtonClicked"></wi-button>
                     </wi-toolbar>
                 </wi-tab>
@@ -147,6 +148,10 @@
             <h3 class="content-heading">Inventory Connect</h3>
             <wi-inventory style='flex:1;'></wi-inventory>
         </div>
+    </template>
+
+    <template id='test'>
+        <wi-test></wi-test>
     </template>
     
     <script src="js/simpleLayout.js.bundle.js"></script>
