--- a/source/html/simpleLayout.html
+++ b/source/html/simpleLayout.html
@@ -154,7 +154,8 @@
     </template>
 
     <template id='test'>
-        <wi-test></wi-test>
+        <!-- <wi-test></wi-test> -->
+        <wi-workflow></wi-workflow>
     </template>
     
     <script src="js/simpleLayout.js.bundle.js"></script>
