--- a/source/html/simpleLayout.html
+++ b/source/html/simpleLayout.html
@@ -60,6 +60,7 @@
     <link href='css/graph.css' rel='stylesheet'>
     <link href='css/main.css' rel='stylesheet'>
     <link href='css/simpleLayout.css' rel='stylesheet'>
+    <link rel="stylesheet" href="css/wi-export.css">
     <!-- Insert this line above script imports  -->
     <script>
         if (typeof module === 'object') {
@@ -113,6 +114,7 @@
                         <wi-button name="WipmButton" icon="fluid-zone-32x32" label="WIPM" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.WipmButtonClicked">
                         </wi-button>
                         <wi-button name="BatchTools" icon="well-load-32x32" label="Batch Tools" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.BatchToolsClicked"></wi-button>
+                        <wi-button name="ExportTool" icon="export-well-top-32x32" label="Export Tool" container="ribbon" disable="handlers.isDisabled()" class="height65" handler="handlers.ExportToolButtonClicked"></wi-button>
                         <wi-button name="ExitButton" icon="exit-32x32" label="Exit" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.ExitButtonClicked"></wi-button>
                     </wi-toolbar>
                 </wi-tab>
@@ -147,6 +149,13 @@
             <h3 class="content-heading">Inventory Connect</h3>
             <!--<wi-inventory style='flex:1;' id-project='1'></wi-inventory>-->
             <wi-inventory style='flex:1;'></wi-inventory>
+        </div>
+    </template>
+
+    <template id="export-tool">
+        <div style='height:100%;display:flex;flex-direction:column;background-color:#f4f4f4;'>
+            <h3 class="content-heading">Export Tool</h3>
+            <wi-export></wi-export>
         </div>
     </template>
     
