--- a/source/html/simpleLayout.html
+++ b/source/html/simpleLayout.html
@@ -8,6 +8,7 @@
     <link href="vendor/css/font-awesome.min.css" rel="stylesheet">
     <link href="vendor/css/themify-icons.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="vendor/css/toastr.min.css">
+    <link rel="stylesheet" type="text/css" href="vendor/css/angular-wizard.min.css">
     <!-- color picker -->
     <link rel="stylesheet" type="text/css" href="vendor/css/bootstrap-colorpicker.min.css">
     <link rel="stylesheet" type="text/css" href="css/color-picker.css">
@@ -94,6 +95,7 @@
     <!--select line style && line width-->
     <script src="vendor/js/angular-sanitize.min.js"></script>
     <script src="vendor/js/toastr.min.js"></script>
+    <script type="text/javascript" src="vendor/js/angular-wizard.min.js"></script>
 
     <!-- <script src="vendor/js/angular-toastr.tpls.js"></script>
     <link rel="stylesheet" href="vendor/css/angular-toastr.css" /> -->
@@ -155,9 +157,11 @@
 
     <template id='test'>
         <!-- <wi-test></wi-test> -->
-        <wi-workflow></wi-workflow>
+        <!-- <wi-workflow id-project='1'></wi-workflow> -->
+        <wi-workflow-player id-project='1' workflow-config='myWorkflowConfig'></wi-workflow-player>
     </template>
-    
+    <div id="testElement"></div>
+
     <script src="js/simpleLayout.js.bundle.js"></script>
     <!--<script src="http://192.168.0.91:33333/socket.io/socket.io.js"></script>-->
     <script src="http://batch.sflow.me/socket.io/socket.io.js"></script>
