--- a/source/html/index.html
+++ b/source/html/index.html
@@ -63,6 +63,9 @@
     <link rel="stylesheet" href="css/wi-multiselect.css">
     <link rel="stylesheet" href="css/wi-condition-node.css">
     <link rel="stylesheet" href="css/wi-workflow.css">
+    <link rel="stylesheet" href="css/wii-explorer.css">
+    <link rel="stylesheet" href="css/wii-items.css">
+    <link rel="stylesheet" href="css/wii-properties.css">
     <link href='css/graph.css' rel='stylesheet'>
     <link href='css/main.css' rel='stylesheet'>
     <!-- Insert this line above script imports  -->
