--- a/source/html/online-inventory/index.html
+++ b/source/html/online-inventory/index.html
@@ -1,4 +1,4 @@
-<style>
+<!--<style>
     wii-explorer, wii-items, wii-properties {
         display: flex;
         flex-direction: column;
@@ -21,45 +21,9 @@
     .panel-heading button.btn {
         margin-left: 5px;
     }
-</style>
+</style>-->
 <div style="flex:1;display:flex;flex-direction:row;">
     <wii-explorer name='wiiExplorer' style="margin-left:1em;flex: 4"></wii-explorer>
     <wii-items name="wiiItems" style="flex: 3;overflow:hidden;"></wii-items>
     <wii-properties name="wiiProperties" style="flex: 3;overflow:auto;"></wii-properties>
 </div>
-<!--
-<style>
-    .well-list {
-        flex: 4;
-        display:flex;
-        flex-direction:column;
-        border: 1px solid #888;
-        margin: 5px;
-    }
-    wi-item-list {
-        flex: 1;
-        border-bottom-left-radius: 4px;
-        border-bottom-right-radius: 4px;
-        padding: 1px 0 0 1px;
-        box-shadow: inset 1px 1px 1px #444;
-        background-color: #fafaf4;
-    }
-    .pane-heading {
-        padding: 5px;
-    }
-</style>
-<div ng-controller='InventoryInspect' style="flex:1;display:flex;flex-direction:row;border: 1px solid black;">
-    <div class="well-list">
-        <div class='pane-heading'>
-            <h4 style='display:inline-block'>Well list</h4>
-            <button type="button" class="btn btn-default" ng-click="refreshInventory()"><i class="fa fa-refresh"></i></button>
-        </div>
-        <wi-item-list show-index='true' on-wi-list-init='handlers.onInventoryInit;' 
-            on-scroll-top='onWellListScrollTop' on-scroll-bottom='onWellListScrollBottom'
-            show-check="true" on-select='onItemSelect' icon='"well-16x16"'>
-        </wi-item-list>
-    </div>
-    <div name="wiiItems" style="flex: 3;border:1px solid black;margin:5px;"></div>
-    <div name="wiiProperties" style="flex: 3;border:1px solid black;margin:5px;"></div>
-</div>
--->
