--- a/source/dialogs/ternary/ternary-modal.html
+++ b/source/dialogs/ternary/ternary-modal.html
@@ -182,7 +182,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <span class="col-sm-3" ng-repeat="curveName in result.curveNames">
+                                <span class="col-sm-3" ng-repeat="curveName in result.curveNames track by $index">
                                     <label>
                                         Curve {{$index + 1}}
                                         <input type="text" ng-model="result.curveNames[$index]"
