--- a/source/html/simpleLayout.html
+++ b/source/html/simpleLayout.html
@@ -120,6 +120,7 @@
                         <wi-button name="TestChooseData" icon="edit-curve-32x32" label="Test Choose Data" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.TestChooseData"></wi-button>
 
                         <wi-button name="ExportTool" icon="export-well-top-32x32" label="Export Tool" container="ribbon" disable="handlers.isDisabled()" class="height65" handler="handlers.ExportToolButtonClicked"></wi-button>
+                        <wi-button name="NeuralNetWorkPlayground" icon="browse-project-32x32" label="NN Playground" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.NeuralNetworkPlaygroundButtonClicked">
                         <wi-button name="ExitButton" icon="exit-32x32" label="Exit" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.ExitButtonClicked"></wi-button>
                     </wi-toolbar>
                 </wi-tab>
@@ -130,6 +131,35 @@
         <wi-context-menu name="ContextMenu"></wi-context-menu>
         <wi-spinner name="SPINNER"></wi-spinner>
     </div>
+
+    <template id="neural-network-playground">
+        <div style='height:100%;display:flex;flex-direction:column;background-color:#f4f4f4;' ng-controller="NeuralController as network">
+            <h3 class="content-heading">Neural Network Playground</h3>
+            <!--<wi-inventory style='flex:1;' id-project='1'></wi-inventory>-->
+            <div class="row">
+                <div class="col-md-6 col-md-offset 2">
+                    <span class="lead">Number of Layers:
+                        <button type="button" class="btn btn-default" name="removeLayers" ng-click="network.removeLayerButtonClicked()">-</button>
+                        <span class="label label-success">{{ network.nLayers }}</span>
+                        <button type="button" class="btn btn-default" name="addLayers" ng-click="network.addLayerButtonClicked()">+</button>
+                    </span>
+
+                </div>
+                <div class="col-md-4">
+                    <span class="lead">Number of Nodes:
+                        <button type="button" class="btn btn-default" name="removeLayers" ng-click="network.removeNodeButtonClicked()">-</button>
+                        <span class="label label-success">{{ network.nNodes }}</span>
+                        <button type="button" class="btn btn-default" name="addLayers" ng-click="network.addNodeButtonClicked()">+</button>
+                    </span>
+                </div>
+                <div class="col-md-2">
+                    <button type="button" class="btn btn-primary" name="button" ng-click="network.neuralNetWorkProperties()">Configure network</button>
+                </div>
+            </div>
+            <wi-neural-network style='flex:1;' input-curves="network.inputCurves" output-curves="network.outputCurves" n-layers="network.nLayers" n-nodes="network.nNodes"></wi-neural-network>
+        </div>
+    </template>
+
     <template id="wipm" >
         <wi-predict-model name="wipm"></wi-predict-model>
         <!-- @@include('./wipm/index.html') -->
@@ -171,7 +201,7 @@
             <wi-export></wi-export>
         </div>
     </template>
-    
+
     <script src="js/simpleLayout.js.bundle.js"></script>
     <!--<script src="http://192.168.0.91:33333/socket.io/socket.io.js"></script>-->
     <script src="http://batch.sflow.me/socket.io/socket.io.js"></script>
