--- a/source/dialogs/new-workflow/new-workflow-modal.html
+++ b/source/dialogs/new-workflow/new-workflow-modal.html
@@ -1,4 +1,10 @@
 <div class="modal fade" data-backdrop="static" data-keyboard="false">
+    <style>
+        .adjust-width .ui-select-bootstrap > .ui-select-choices, 
+        .adjust-width .ui-select-bootstrap > .ui-select-no-choice {
+            width: 69%;
+        }
+    </style>
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -22,9 +28,14 @@
                         </div>
                         <div class="form-group">
                             <label class="control-label col-sm-3">Workflow Spec</label>
-                            <div class="col-sm-9">
+                            <wi-item-dropdown class='col-sm-9 height34px position-fixed adjust-width'
+                                on-wi-dropdown-init="wiModal.getWorkflowSpecs" 
+                                on-item-changed="wiModal.workflowSpecChanged"
+                                place-holder="Select workflow spec">
+                            </wi-item-dropdown>
+                            <!--<div class="col-sm-9">
                                 <input type="text" class="form-control" ng-model="spec">
-                            </div>
+                            </div>-->
                         </div>
                     </form>
                 </div>
