--- a/source/html/index.html
+++ b/source/html/index.html
@@ -66,6 +66,7 @@
     <link rel="stylesheet" href="css/wii-explorer.css">
     <link rel="stylesheet" href="css/wii-items.css">
     <link rel="stylesheet" href="css/wii-properties.css">
+    <link rel="stylesheet" href="css/wi-item-dropdown.css">
     <link href='css/graph.css' rel='stylesheet'>
     <link href='css/main.css' rel='stylesheet'>
     <!-- Insert this line above script imports  -->
