--- a/source/html/simpleLayout.html
+++ b/source/html/simpleLayout.html
@@ -120,7 +120,8 @@
                         <wi-button name="TestChooseData" icon="edit-curve-32x32" label="Test Choose Data" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.TestChooseData"></wi-button>
 
                         <wi-button name="ExportTool" icon="export-well-top-32x32" label="Export Tool" container="ribbon" disable="handlers.isDisabled()" class="height65" handler="handlers.ExportToolButtonClicked"></wi-button>
-                        <wi-button name="NeuralNetWorkPlayground" icon="browse-project-32x32" label="NN Playground" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.NeuralNetworkPlaygroundButtonClicked">
+                        <wi-button name="NeuralNetWorkPlayground" icon="browse-project-32x32" label="NN Playground" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.NeuralNetworkPlaygroundButtonClicked"></wi-button>
+                        <wi-button name="wiPlotPlayground" icon="browse-project-32x32" label="Wi Plot" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.wiPlotButtonClicked"></wi-button>
                         <wi-button name="ExitButton" icon="exit-32x32" label="Exit" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.ExitButtonClicked"></wi-button>
                     </wi-toolbar>
                 </wi-tab>
@@ -131,6 +132,21 @@
         <wi-context-menu name="ContextMenu"></wi-context-menu>
         <wi-spinner name="SPINNER"></wi-spinner>
     </div>
+
+    <template id="wi-plot-playground">
+        <div style='height:100%;display:flex;flex-direction:column;background-color:#f4f4f4;' ng-controller="wiPlotPlaygroundController as wiPlotCtrl">
+            <h3 class="content-heading">Wi Plot Sample</h3>
+            <div class="row container-fluid">
+                <div class="col-md-1"></div>
+                <button class="btn btn-default col-md-2" ng-click="wiPlotCtrl.makeRandomData()">Random data</button>
+                <button class="btn btn-default col-md-2" ng-click="wiPlotCtrl.makeLineColor()">Random Line Color</button>
+                <button class="btn btn-default col-md-2" ng-click="wiPlotCtrl.makePointColor()">Random Point Color</button>
+                <button class="btn btn-default col-md-2" ng-click="wiPlotCtrl.toggleLine()" ng-class="wiPlotCtrl.plotOption.showLine ? 'active':''">Show Line</button>
+                <button class="btn btn-default col-md-2" ng-click="wiPlotCtrl.togglePoint()" ng-class="wiPlotCtrl.plotOption.showPoint ? 'active':''">Show Point</button>
+            </div>
+            <wi-plot style='flex:1; display: flex;' configs="wiPlotCtrl.plotConfig" options="wiPlotCtrl.plotOption"></wi-plot>
+        </div>
+    </template>
 
     <template id="neural-network-playground">
         <div style='height:100%;display:flex;flex-direction:column;background-color:#f4f4f4;' ng-controller="NeuralController as network">
