--- a/source/dialogs/open-workflow/open-workflow-modal.html
+++ b/source/dialogs/open-workflow/open-workflow-modal.html
@@ -20,10 +20,10 @@
                     <div class="form-group">
                         <label class="control-label col-sm-3">Workflow name:</label>
                         <wi-item-dropdown class='col-sm-9 height34px position-fixed'
-                            on-wi-dropdown-init="wiModal.getWorkflowList" 
+                            on-wi-dropdown-init="wiModal.getWorkflowList"
                             on-item-changed="wiModal.workflowChanged"
                             place-holder="Select workflow"
-                            ctrl-btn-icon='fa fa-times-circle text-color-red line-height-1_5'
+                            ctrl-btn-icon='fa fa-times-circle line-height-1_5'
                             on-ctrl-btn-click='wiModal.deleteWorkflow'>
                         </wi-item-dropdown>
                         <!--
