--- a/source/dialogs/combined-plot-properties/combined-plot-properties-modal.html
+++ b/source/dialogs/combined-plot-properties/combined-plot-properties-modal.html
@@ -26,30 +26,30 @@
                                 <div class="col-sm-4">
                                     <ui-select ng-model="wiModal.selectedLogplot"
                                                 ng-change="wiModal.onSelectLogplot(wiModal.selectedLogplot);">
-                                        <ui-select-match placeholder='Select a logplot'>{{wiModal.selectedLogplot.name}}</ui-select-match>
+                                        <ui-select-match placeholder='Select a logplot'>{{wiModal.selectedLogplot.properties.name}}</ui-select-match>
                                         <ui-select-choices group-by="'wellName'"
                                                     repeat='logplot in wiModal.logplots | filter: $select.search'>
-                                                    <div class="padding-left-20px">{{logplot.name}}</div>
+                                                    <div class="padding-left-20px">{{logplot.properties.name}}</div>
                                         </ui-select-choices>
                                     </ui-select>
                                 </div>
                                 <div class="col-sm-4">
                                     <ui-select ng-model="wiModal.selectedHistogram"
                                                 ng-change="wiModal.onSelectHistogram(wiModal.selectedHistogram);">
-                                        <ui-select-match placeholder='Select a histogram'>{{wiModal.selectedHistogram.name}}</ui-select-match>
+                                        <ui-select-match placeholder='Select a histogram'>{{wiModal.selectedHistogram.properties.name}}</ui-select-match>
                                         <ui-select-choices group-by="'wellName'"
                                                     repeat='histogram in wiModal.histograms | filter: $select.search'>
-                                                    <div class="padding-left-20px">{{histogram.name}}</div>
+                                                    <div class="padding-left-20px">{{histogram.properties.name}}</div>
                                         </ui-select-choices>
                                     </ui-select>
                                 </div>
                                 <div class="col-sm-4">
                                     <ui-select ng-model="wiModal.selectedCrossplot"
                                                 ng-change="wiModal.onSelectCrossplot(wiModal.selectedCrossplot);">
-                                        <ui-select-match placeholder='Select a crossplot'>{{wiModal.selectedCrossplot.name}}</ui-select-match>
+                                        <ui-select-match placeholder='Select a crossplot'>{{wiModal.selectedCrossplot.properties.name}}</ui-select-match>
                                         <ui-select-choices group-by="'wellName'"
                                                     repeat='crossplot in wiModal.crossplots | filter: $select.search'>
-                                                    <div class="padding-left-20px">{{crossplot.name}}</div>
+                                                    <div class="padding-left-20px">{{crossplot.properties.name}}</div>
                                         </ui-select-choices>
                                     </ui-select>
                                 </div>
