add option object track to auto size track form

--- a/source/dialogs/auto-size-track/auto-size-track-modal.html
+++ b/source/dialogs/auto-size-track/auto-size-track-modal.html
@@ -57,6 +57,13 @@
                                     All Zone Track
                                 </label>
                             </div>
+                            <div class="form-group">
+                                <label>
+                                    <input type="checkbox"
+                                           ng-model="wiModal.object">
+                                    All Object Track
+                                </label>
+                            </div>
                         </div>
                     </form>
                 </div>
