--- a/source/html/index.html
+++ b/source/html/index.html
@@ -56,6 +56,7 @@
     <link href='css/wi-d3-crossplot.css' rel='stylesheet'>
     <link href='css/wi-d3.css' rel='stylesheet'>
     <link href='css/wi-explorer.css' rel='stylesheet'>
+    <link href='css/wi-plot.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/wi-zone.css">
     <link rel="stylesheet" href="css/wi-container.css">
     <link rel="stylesheet" href="css/wi-user.css">
@@ -86,6 +87,7 @@
     <script src="vendor/js/angular-modal-service.min.js"></script>
     <script src="vendor/js/jquery-ui.js"></script>
     <script src="vendor/js/jquery.mousewheel.min.js"></script>
+    <script src="vendor/js/jquery.slimscroll.min.js"></script>
     <script src='vendor/js/goldenlayout.min.js'></script>
     <script src='vendor/js/d3.min.js'></script>
     <script src='vendor/js/ResizeSensor.js'></script>
