update wi-curve-listing to excel

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" type="text/css" href="vendor/css/toastr.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/angular-wizard@latest/dist/angular-wizard.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/handsontable/0.38.1/handsontable.full.min.css">
 
     <!-- color picker -->
     <link rel="stylesheet" type="text/css" href="vendor/css/bootstrap-colorpicker.min.css">
@@ -106,7 +107,7 @@
 
     <script src="vendor/js/toastr.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/angular-wizard@latest/dist/angular-wizard.min.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handsontable/0.38.1/handsontable.full.min.js"></script>
     <script src="js/main.js.bundle.js"></script>
 
     <!-- Insert this line after script imports -->
