--- a/source/dialogs/save-curves/save-curves-modal.html
+++ b/source/dialogs/save-curves/save-curves-modal.html
@@ -2,7 +2,7 @@
     <div class='modal-dialog'>
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" aria-hidden="true">&times;</button>
+                <!-- <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" aria-hidden="true">&times;</button> -->
                 <h4>Save Curve(s)</h4>
             </div>
             <div class="modal-body dialog-style">
